# TermSrvRpc

./: .gitignore  CMakeLists.txt  README.md  rpcgen.ps1
dll/: CMakeLists.txt  TermSrvRpc.cpp  TermSrvRpc.def  TermSrvRpc.h  midl_user.c
dotnet/: CMakeLists.txt
dotnet/Devolutions.TermSrvRpc/: Bindings.cs  Devolutions.TermSrvRpc.targets
idl/: SessEnvRpc.idl  TSVIPRpc.idl  allproc.h  ms-dtyp.h  ms-dtyp.idl  rcmpublic.idl  tsdef.h  tspubrpc.idl  winsta.h
